build out pipeline structure

--- a/ar-coupons/pipeline/04_pipeline.yaml
+++ b/ar-coupons/pipeline/04_pipeline.yaml
@@ -9,6 +9,7 @@ spec:
   - name: deployment-name
     type: string
     description: name of the deployment to be patched
+    default: "k8s"
   # - name: git-url
   #   type: string
   #   description: url of the git repo for the code of deployment
@@ -48,7 +49,13 @@ spec:
   #     workspace: shared-workspace
   #   runAfter:
   #   - fetch-repository
-  - name: apply-manifests
+  - name: start
+    taskRef:
+      name: apply-manifests
+    workspaces:
+    - name: source
+      workspace: shared-workspace
+  - name: git-clone-model
     taskRef:
       name: apply-manifests
     workspaces:
@@ -56,6 +63,58 @@ spec:
       workspace: shared-workspace
     # runAfter:
     # - build-image
+    runAfter:
+    - start
+  - name: lint-and-syntax-model
+    taskRef:
+      name: apply-manifests
+    workspaces:
+    - name: source
+      workspace: shared-workspace
+    runAfter:
+    - git-clone-model
+  - name: build-model-image
+    taskRef:
+      name: apply-manifests
+    workspaces:
+    - name: source
+      workspace: shared-workspace
+    runAfter:
+    - lint-and-syntax-model
+  - name: sanity-check-model
+    taskRef:
+      name: apply-manifests
+    workspaces:
+    - name: source
+      workspace: shared-workspace
+    runAfter:
+    - build-model-image
+  - name: performance-check-model
+    taskRef:
+      name: apply-manifests
+    workspaces:
+    - name: source
+      workspace: shared-workspace
+    runAfter:
+    - build-model-image
+  - name: security-scan-model
+    taskRef:
+      name: apply-manifests
+    workspaces:
+    - name: source
+      workspace: shared-workspace
+    runAfter:
+    - build-model-image
+  - name: trigger-move-to-production
+    taskRef:
+      name: apply-manifests
+    workspaces:
+    - name: source
+      workspace: shared-workspace
+    runAfter:
+    - security-scan-model
+    - performance-check-model
+    - sanity-check-model
   - name: update-deployment
     taskRef:
       name: update-deployment
@@ -65,4 +124,19 @@ spec:
     # - name: IMAGE
     #   value: $(params.IMAGE)
     runAfter:
-    - apply-manifests
+    - start
+
+
+
+
+
+# git clone models
+#   lint+syntax-check models
+#     build model image
+#        sanity-check model image (basic test)
+#        performance test model image (less than x ms)
+#        security-scan test model image (less than x ms)
+# syntax check yaml pieces
+# syntax check python pieces
+# trigger
+
