--- a/ar-coupons/pipeline/kustomization.yaml
+++ b/ar-coupons/pipeline/kustomization.yaml
@@ -5,5 +5,6 @@ resources:
   - 01_apply_manifest_task.yaml
   - 02_update_deployment_task.yaml
   - 03_persistent_volume_claim.yaml
-  - 04_pipeline.yaml
+  - 10_model_pipeline.yaml
+  - 11_frontend_pipeline.yaml
   - 05_taskrun.yaml
