removing taskrun for now

--- a/gogs/kustomization.yaml
+++ b/gogs/kustomization.yaml
@@ -2,6 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - gogs.cm.yaml
-  - gogs.yaml
-  - gogs.taskrun.yaml
+  - "gogs.cm.yaml"
+  - "gogs.yaml"
+  #- "gogs.taskrun.yaml"
