--- a/gogs/gogs.yaml
+++ b/gogs/gogs.yaml
@@ -175,6 +175,12 @@ spec:
   to:
     kind: Service
     name: gogs
+    weight: 100
+  port:
+    targetPort: 3000-tcp
+  tls:
+    termination: edge
+  wildcardPolicy: None
 ---
 kind: PersistentVolumeClaim
 apiVersion: v1
