--- a/gogs/gogs.hook.yaml
+++ b/gogs/gogs.hook.yaml
@@ -1,23 +1,23 @@
 ---
-apiVersion: triggers.tekton.dev/v1alpha1
-kind: EventListener
-metadata:
-  name: webhook
-spec:
-  serviceAccountName: pipeline
-  triggers:
-    - name: petclinic-webhook
-      interceptors:
-        - cel:
-            overlays:
-            - key: short_sha
-              expression: "body.after.truncate(7)"
-            - key: branch_name
-              expression: "body.ref.split('/')[2]"
-      bindings:
-        - ref: gogs-triggerbinding
-      template:
-        name: petclinic-trigger-template
+# apiVersion: triggers.tekton.dev/v1alpha1
+# kind: EventListener
+# metadata:
+#   name: webhook
+# spec:
+#   serviceAccountName: pipeline
+#   triggers:
+#     - name: petclinic-webhook
+#       interceptors:
+#         - cel:
+#             overlays:
+#             - key: short_sha
+#               expression: "body.after.truncate(7)"
+#             - key: branch_name
+#               expression: "body.ref.split('/')[2]"
+#       bindings:
+#         - ref: gogs-triggerbinding
+#       template:
+#         name: petclinic-trigger-template
 ---
 apiVersion: route.openshift.io/v1
 kind: Route
