--- a/argocd-apps/prod-frontend.yaml
+++ b/argocd-apps/prod-frontend.yaml
@@ -2,10 +2,10 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: prod-frontend
-  namespace: argocd-instance
+  namespace: arc-test01
 spec:
   destination:
-    namespace: argocd-instance
+    namespace: arc-test01
     server: https://kubernetes.default.svc
   project: default
   source:
