--- a/argocd-instance/kustomization.yaml
+++ b/argocd-instance/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-#namespace: argocd-instance
+#namespace: arc-test01
 
 resources:
   #- 100.namespace.yaml
