--- a/gogs/gogs.taskrun.yaml
+++ b/gogs/gogs.taskrun.yaml
@@ -29,7 +29,7 @@ spec:
           import requests
           gogs_user = "$(params.GOGS_USER)"
           gogs_pwd = "$(params.GOGS_PASSWORD)"
-          webhookURL = "http://" + os.popen('oc get route webhook -o template --template="{{.spec.host}}"').read()
+          #webhookURL = "http://" + os.popen('oc get route webhook -o template --template="{{.spec.host}}"').read()
           gogsURL = "http://" + os.popen('oc get svc gogs -o template --template="{{.spec.clusterIP}}"').read() + ":3000"
           #
           # create admin user
