--- a/ar-coupons/pipeline/kustomization.yaml
+++ b/ar-coupons/pipeline/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - 01_apply_manifest_task.yaml
   - 02_update_deployment_task.yaml
-  - 03_persistent_volume_claim.yaml
+  # - 03_persistent_volume_claim.yaml
   - 10_model_pipeline.yaml
   - 11_frontend_pipeline.yaml
   - 05_taskrun.yaml
