--- a/gogs/gogs.taskrun.yaml
+++ b/gogs/gogs.taskrun.yaml
@@ -30,7 +30,7 @@ spec:
           gogs_user = "$(params.GOGS_USER)"
           gogs_pwd = "$(params.GOGS_PASSWORD)"
           #webhookURL = "http://" + os.popen('oc get route webhook -o template --template="{{.spec.host}}"').read()
-          gogsURL = "http://" + os.popen('oc get svc gogs -o template --template="{{.spec.clusterIP}}"').read() + ":3000"
+          gogsURL = "http://" + os.popen('oc -n ${NAMESPACE} get svc gogs -o template --template="{{.spec.clusterIP}}"').read() + ":3000"
           #
           # create admin user
           data_user = {
