--- a/ar-coupons/kustomization.yaml
+++ b/ar-coupons/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: arc-test01
+#namespace: arc-test01
 
 resources:
   - dev
