--- a/argocd-instance/rolebinding.yaml
+++ b/argocd-instance/rolebinding.yaml
@@ -10,4 +10,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: argocd-instance-argocd-application-controller
-  namespace: arc-test01
+  # namespace: arc-test01
