--- a/argocd-apps/dev-frontend.yaml
+++ b/argocd-apps/dev-frontend.yaml
@@ -13,7 +13,8 @@ spec:
       # I believe I came across a bug then the line below is true
       recurse: false
     path: ar-coupons/dev/frontend
-    repoURL: https://github.com/rh-aiservices-bu/car-deploy.git
+    # repoURL: https://github.com/rh-aiservices-bu/car-deploy.git
+    repoURL: http://gogs/gogs/car-deploy.git
     targetRevision: dev
   syncPolicy:
     automated:
