--- a/gogs/gogs.taskrun.yaml
+++ b/gogs/gogs.taskrun.yaml
@@ -3,6 +3,8 @@ kind: TaskRun
 metadata:
   generateName: init-gogs-
   name: gogs-initialize-content
+  annotations:
+    argocd.argoproj.io/sync-wave: "4"
 spec:
   taskSpec:
     params:
@@ -33,6 +35,18 @@ spec:
           gogsURL = "http://" + os.popen('oc -n ${NAMESPACE} get svc gogs -o template --template="{{.spec.clusterIP}}"').read() + ":3000"
           print(gogsURL)
           requests.get(gogsURL, timeout=60)
+          from requests.adapters import HTTPAdapter
+          from requests.packages.urllib3.util.retry import Retry
+          retry_strategy = Retry(
+              total=3,
+              status_forcelist=[429, 500, 502, 503, 504],
+              method_whitelist=["HEAD", "GET", "OPTIONS"]
+          )
+          adapter = HTTPAdapter(max_retries=retry_strategy)
+          http = requests.Session()
+          http.mount("https://", adapter)
+          http.mount("http://", adapter)
+          response = http.get(gogsURL)
           #
           # create admin user
           data_user = {
