--- a/route.yaml
+++ b/route.yaml
@@ -3,11 +3,11 @@ kind: Route
 metadata:
   creationTimestamp: null
   labels:
-    app: car-app
-    app.kubernetes.io/component: car-app
-    app.kubernetes.io/instance: car-app
-    app.kubernetes.io/part-of: car
-  name: car-app
+    app: arc-app
+    app.kubernetes.io/component: arc-app
+    app.kubernetes.io/instance: arc-app
+    app.kubernetes.io/part-of: arc
+  name: arc-app
 spec:
   port:
     targetPort: 8080-tcp
@@ -15,6 +15,6 @@ spec:
     termination: edge
   to:
     kind: ""
-    name: car-app
+    name: arc-app
     weight: null
 status: {}
