--- a/ar-coupons/dev/model/200.model.buildconfig.yaml
+++ b/ar-coupons/dev/model/200.model.buildconfig.yaml
@@ -8,8 +8,8 @@ metadata:
     app.kubernetes.io/component: dev-arc-model
     app.kubernetes.io/instance: dev-arc-model
     app.kubernetes.io/part-of: dev-arc
-  annotations:
-    argocd.argoproj.io/sync-wave: "2"
+  # annotations:
+  #   argocd.argoproj.io/sync-wave: "2"
 spec:
   nodeSelector: null
   postCommit: {}
