--- a/ar-coupons/dev/model/300.model.deployment.yaml
+++ b/ar-coupons/dev/model/300.model.deployment.yaml
@@ -4,6 +4,7 @@ apiVersion: apps/v1
 metadata:
   name: dev-arc-model
   annotations:
+    # argocd.argoproj.io/sync-wave: "3"
     image.openshift.io/triggers: |-
       [
         {
@@ -19,8 +20,6 @@ metadata:
     app.kubernetes.io/component: dev-arc-model
     app.kubernetes.io/instance: dev-arc-model
     app.kubernetes.io/part-of: dev-arc
-  annotations:
-    argocd.argoproj.io/sync-wave: "3"
 spec:
   replicas: 2
   selector:
