--- a/ar-coupons/dev/model/400.model.service.yaml
+++ b/ar-coupons/dev/model/400.model.service.yaml
@@ -8,8 +8,8 @@ metadata:
     app.kubernetes.io/component: dev-arc-model
     app.kubernetes.io/instance: dev-arc-model
     app.kubernetes.io/part-of: dev-arc
-  annotations:
-    argocd.argoproj.io/sync-wave: "3"
+  # annotations:
+  #   argocd.argoproj.io/sync-wave: "3"
 spec:
   ipFamilies:
     - IPv4
