--- a/argocd-apps/gogs-app.yaml
+++ b/argocd-apps/gogs-app.yaml
@@ -19,6 +19,12 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    retry:
+      backoff:
+        duration: 5s
+        factor: 1
+        maxDuration: 10m
+      limit: 100
   ignoreDifferences:
   - group: apps
     kind: Deployment
