--- a/argocd-apps/prod-frontend.yaml
+++ b/argocd-apps/prod-frontend.yaml
@@ -20,6 +20,12 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    retry:
+      backoff:
+        duration: 5s
+        factor: 1
+        maxDuration: 10m
+      limit: 100
   ignoreDifferences:
   - group: apps
     kind: Deployment
