--- a/ar-coupons/tekton/pipelines/03_persistent_volume_claim.yaml
+++ b/ar-coupons/tekton/pipelines/03_persistent_volume_claim.yaml
@@ -1,7 +1,18 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: source-pvc
+  name: source-pvc1
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 50Mi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: source-pvc2
 spec:
   accessModes:
     - ReadWriteOnce
