--- a/ar-coupons/tekton/pipelines/12_syntaxchecks_pipeline.yaml
+++ b/ar-coupons/tekton/pipelines/12_syntaxchecks_pipeline.yaml
@@ -1,23 +1,14 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: linter-pvc
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 500Mi
 ---
 apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
-  name: linter-pipeline
+  name: syntax-pipeline
 spec:
   workspaces:
     - name: shared-workspace
   tasks:
-    - name: fetch-repository
+    ## get repo
+    - name: fetch-deploy-repo
       taskRef:
         name: git-clone
       workspaces:
@@ -29,21 +20,24 @@ spec:
         - name: revision
           value: "dev"
         - name: subdirectory
-          value: ""
+          value: "deploy"
         - name: deleteExisting
           value: "true"
-    - name: yaml-lint-run #lint yaml
+    ## yaml-lint
+    - name: yaml-lint-deploy
       taskRef:
         name: yaml-lint
       runAfter:
-        - fetch-repository
+        - fetch-deploy-repo
       workspaces:
         - name: shared-workspace
           workspace: shared-workspace
       params:
         - name: args
           value: ["."]
-    - name: fetch-repository-model
+
+
+    - name: fetch-model-repo
       taskRef:
         name: git-clone
       workspaces:
@@ -53,36 +47,36 @@ spec:
         - name: url
           value: https://github.com/rh-aiservices-bu/arc-rest
         - name: subdirectory
-          value: ""
+          value: "rest"
         - name: deleteExisting
           value: "true"
         - name: revision
           value: "dev"
     - name: python-black-run #python code prettier
       taskRef:
-        name: black
+        name: python-black
       runAfter:
-        - fetch-repository-model
+        - fetch-model-repo
       workspaces:
         - name: shared-workspace
           workspace: shared-workspace
       params:
         - name: args
           value: [".", "--check", "--diff"]
-        - name: image
-          value: python:3.8-slim
+        # - name: image
+        #   value: python:3.8-slim
 ---
 apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
-  name: linter-pipeline-run
+  name: syntax-pipeline-run
 spec:
   pipelineRef:
-    name: linter-pipeline
+    name: syntax-pipeline
   workspaces:
     - name: shared-workspace
       persistentvolumeclaim:
-        claimName: linter-pvc
+        claimName: source-pvc1
 
 # ---
 # apiVersion: tekton.dev/v1beta1
