--- a/ar-coupons/tekton/tasks/python-black.yaml
+++ b/ar-coupons/tekton/tasks/python-black.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
@@ -35,8 +36,10 @@ spec:
       script: |
         export HOME=/tmp/python
         export PATH=$PATH:/tmp/python/.local/bin
+        pwd
+        ls -al
         if [ -n "$(params.requirements_file)" ] && [ -e "$(params.requirements_file)" ];then
-            python -mpip install --user -r $(params.requirements_file)
+            python -m pip install --user -r $(params.requirements_file)
         fi
         black $@
       args:
