--- a/ar-coupons/tekton/tasks/yaml-lint.yaml
+++ b/ar-coupons/tekton/tasks/yaml-lint.yaml
@@ -27,6 +27,8 @@ spec:
       image: docker.io/cytopia/yamllint:1.23@sha256:e9deea51bbdc35950cacf6594dab94100d9bbf5c987540b8874167d58e6bdce2 #tag: 1.23
       workingDir: $(workspaces.shared-workspace.path)
       command:
-        - 'yamllint -d "{extends: relaxed, rules: {line-length: {max: 300}}}"'
+        - yamllint
+        - -d
+        - '{extends: default, rules: {line-length: {max: 300}}}'
       args:
         - $(params.args)
