working on finally

--- a/ar-coupons/tekton/pipelines/12_syntaxchecks_pipeline.yaml
+++ b/ar-coupons/tekton/pipelines/12_syntaxchecks_pipeline.yaml
@@ -63,6 +63,10 @@ spec:
       params:
         - name: args
           value: [".", "--check", "--diff"]
+  finally:
+    - name: cleanup-test
+      taskRef:
+        name: cleanup
         # - name: image
         #   value: python:3.8-slim
 ---
