--- a/ar-coupons/tekton/kustomization.yaml
+++ b/ar-coupons/tekton/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - tasks/02_update_deployment_task.yaml
   - tasks/python-black.yaml
   - tasks/yaml-lint.yaml
+  - tasks/cleanup.yaml
   ## pipelines
   - pipelines/03_persistent_volume_claim.yaml
   - pipelines/05_taskrun.yaml
