--- a/ar-coupons/tekton/pipelines/03_persistent_volume_claim.yaml
+++ b/ar-coupons/tekton/pipelines/03_persistent_volume_claim.yaml
@@ -2,6 +2,17 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: source-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 50Mi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
   name: source-pvc1
 spec:
   accessModes:
