--- a/argocd-apps/pipeline.yaml
+++ b/argocd-apps/pipeline.yaml
@@ -10,13 +10,12 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   source:
+    repoURL: http://gogs:3000/gogs/arc-deploy.git
+    targetRevision: dev
+    path: ar-coupons/tekton
     directory:
       # I believe I came across a bug then the line below is true
       recurse: false
-    path: ar-coupons/pipeline
-    # repoURL: https://github.com/rh-aiservices-bu/arc-deploy.git
-    repoURL: http://gogs:3000/gogs/arc-deploy.git
-    targetRevision: dev
   syncPolicy:
     automated:
       prune: true
