--- a/ar-coupons/dev/frontend/200.frontend.buildconfig.yaml
+++ b/ar-coupons/dev/frontend/200.frontend.buildconfig.yaml
@@ -22,7 +22,8 @@ spec:
   source:
     type: Git
     git:
-      uri: 'https://github.com/rh-aiservices-bu/arc-app'
+      # uri: 'https://github.com/rh-aiservices-bu/arc-app'
+      uri: 'http://gogs:3000/gogs/arc-app'
       ref: dev
   output:
     to:
